--- a/render.yaml
+++ b/render.yaml
@@ -3,4 +3,7 @@ services:
     name: garage-sensors
     env: python
     buildCommand: ""
-    startCommand: "uvicorn main:app --host 0.0.0.0 --port 10000"
+    startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
+    envVars:
+      - key: PORT
+        value: 10000
