--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,6 @@ services:
   - type: web
     name: garage-sensors
     env: python
+    plan: free
     buildCommand: ""
     startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
-    envVars:
-      - key: PORT
-        value: 10000
