--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,8 @@
+
 services:
   - type: web
     name: garage-sensors
     env: python
     plan: free
     buildCommand: ""
-    startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
+    startCommand: "uvicorn main:app --host 0.0.0.0 --port 10000"
